# prog-strength-developer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: apply.yml  deploy-manager.yml  dispatch-sow.yml  plan.yml  release.yml
bootstrap/: ddb_exporter.py  install_plugins.py  manager_userdata.sh.tpl  plugins.json  prompt-dx.md.tpl  prompt.md.tpl  ticket.py  userdata.sh.tpl  worker_exporter.py
caddy/: Caddyfile
docs/: README.md  setup.md  troubleshooting.md
docs/superpowers/specs/: 2026-06-16-ddb-history-exporter-design.md  2026-06-16-run-history-table-design.md  2026-06-17-instance-type-and-cost-metrics-design.md
fleet/: __init__.py  __main__.py  cli.py  config.py  dynamo.py  memory.py  metrics.py  models.py  registry.py  service.py
monitoring/: docker-compose.yml
monitoring/ddb_exporter/: Dockerfile
monitoring/grafana/dashboards/: developer-platform.json  manager-host-health.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
scripts/: preflight.sh
terraform/: backend.tf  cloudwatch.tf  dynamodb.tf  ec2.tf  iam.tf  main.tf  manager.tf  outputs.tf  secrets.tf  variables.tf  vpc.tf
tests/: test_ddb_exporter.py  test_finalize_metrics_push.py  test_fleet_cli.py  test_fleet_dynamo.py  test_fleet_registry.py  test_install_plugins.py  test_metrics.py  test_models.py  test_ticket.py  test_worker_exporter.py
tests/fixtures/: sample.jsonl
